@@ -204,6 +204,8 @@ typedef struct _BLOCKSLIST
 PBLOCKSLIST hb_comp_BlocksList = NULL;
 
 static HB_EXPR_PTR asExpr = NULL;
+#define HB_YYERROR_CATCHER( var )   (asExpr = (var))
+
 static void hb_compYYError( char cPrefix, int iError, const char * szError1, const char * szError2 );
 
 static void hb_compDebugStart( void ) { };
@@ -827,6 +829,8 @@ LiteralValue : LITERAL                {
                                                pCopy[ pTmp - pCopy ] = '\0';
                                                pBaseArrayName = hb_compExprNewString( pCopy, pTmp - pCopy, TRUE );
                                             }
+                                            else
+                                               hb_xfree( pCopy );
 
                                             bTrancuateBaseArray = FALSE;
                                          }
@@ -1051,7 +1055,7 @@ ArrayAtAlias : ArrayAt ALIASOP      { $$ = $1; }
 Variable    : IdentName         {
                                    $$ = hb_compExprNewVar( $1 );
 
-                                   asExpr = $$;
+                                   HB_YYERROR_CATCHER ( $$ );
 
                                    if( hb_comp_BlocksList )
                                    {
@@ -1341,7 +1345,9 @@ FunCall    : IdentName '(' ArgList ')' { $$ = hb_compExprNewFunCall( hb_compExpr
            | IIFInline                 { $$ = $1; }
            ;
 
-ArgList    : Argument                  { $$ = hb_compExprNewArgList( $1 ); }
+ArgList    : Argument                  { $$ = hb_compExprNewArgList( $1 );
+                                         HB_YYERROR_CATCHER ( $$ );
+                                       }
            | ArgList ',' Argument      { $$ = hb_compExprAddListExpr( $1, $3 ); }
            ;
 
@@ -1464,6 +1470,7 @@ WithData    : ':' SendId                 {
                                                   hb_compYYError( 'E', HB_COMP_ERR_UNMATCHED_WITHOBJECT, "&", NULL );
                                             }
                                             $$ = hb_compExprNewWithSendExp( $2 );
+                                            HB_YYERROR_CATCHER ( $$ );
                                          }
            ;
 
@@ -2100,7 +2107,7 @@ CodeBlock  : '{' CBMARKER
 
                {
                   $<asExpr>$ = hb_compExprNewCodeBlock();
-                  asExpr = $<asExpr>$;
+                  HB_YYERROR_CATCHER ( $<asExpr>$ );
 
                   if( hb_comp_BlocksList == NULL )
                   {
@@ -2223,7 +2230,11 @@ BlockExpList : Expression                  { pBlockSimple = $1;   $$ = hb_compEx
  */
 
 BlockVarList : IdentName AsType                   { hb_comp_iVarScope = VS_LOCAL; $$ = hb_compExprCBVarAdd( $<asExpr>0, $1,    hb_comp_cVarType ); hb_comp_cVarType = ' '; }
-             |                                    { hb_comp_iVarScope = VS_LOCAL; $$ = hb_compExprCBVarAdd( $<asExpr>0, NULL , hb_comp_cVarType ); asExpr = $$;hb_comp_cVarType = ' '; }
+             |                                    { hb_comp_iVarScope = VS_LOCAL;
+                                                    $$ = hb_compExprCBVarAdd( $<asExpr>0, NULL , hb_comp_cVarType );
+                                                    HB_YYERROR_CATCHER ( $$ );
+                                                    hb_comp_cVarType = ' ';
+                                                  }
              | BlockVarList ',' IdentName AsType  { hb_comp_iVarScope = VS_LOCAL; $$ = hb_compExprCBVarAdd( $1, $3,    hb_comp_cVarType ); hb_comp_cVarType = ' '; }
              | BlockVarList ','                   { hb_comp_iVarScope = VS_LOCAL; $$ = hb_compExprCBVarAdd( $1, NULL,  hb_comp_cVarType ); hb_comp_cVarType = ' '; }
              ;
@@ -4350,6 +4361,57 @@ void hb_compReleaseRTVars( void )
 static void hb_compYYError( char cPrefix, int iError, const char * szError1, const char * szError2 )
 {
    hb_compGenError( hb_comp_szErrors, cPrefix, iError, szError1, szError2 );
+
+   if( asExpr )
+   {
+      switch( asExpr->ExprType )
+      {
+         case HB_ET_WITHSEND:
+         case HB_ET_VARIABLE:
+            hb_xfree( asExpr );
+            asExpr = NULL;
+            break;
+
+         case HB_ET_CODEBLOCK:
+         {
+            PHB_CBVAR pDel, pVar = (PHB_CBVAR) asExpr->value.asList.pIndex;
+
+            while( pVar )
+            {
+               pDel = pVar;
+               pVar = pVar->pNext;
+               hb_xfree( (void *) pDel );
+            }
+            hb_xfree( asExpr );
+            asExpr = NULL;
+            break;
+         }
+
+         case HB_ET_ARGLIST:
+         {
+            HB_EXPR_PTR pDel, pVar = asExpr->value.asList.pExprList;
+
+            while( pVar )
+            {
+               pDel = pVar;
+               pVar = pVar->pNext;
+               hb_xfree( (void *) pDel );
+            }
+            hb_xfree( asExpr );
+            asExpr = NULL;
+            break;
+         }
+      }
+   }
+
+   while( hb_comp_BlocksList )
+   {
+      PBLOCKSLIST pDel = hb_comp_BlocksList;
+
+      hb_comp_BlocksList = hb_comp_BlocksList->pOuter;
+      hb_xfree( (void *) pDel );
+   }
+
 
 #if 0
 
