@@ -269,6 +269,8 @@ typedef struct _BLOCKSLIST
 PBLOCKSLIST hb_comp_BlocksList = NULL;
 
 static HB_EXPR_PTR asExpr = NULL;
+#define HB_YYERROR_CATCHER( var )   (asExpr = (var))
+
 static void hb_compYYError( char cPrefix, int iError, const char * szError1, const char * szError2 );
 
 static void hb_compDebugStart( void ) { };
@@ -294,8 +296,8 @@ static void hb_compDebugStart( void ) { };
 
 /* In a future release of Bison, this section will be replaced
    by #include "harboury.h".  */
-#ifndef YY_YY_OBJ_B32_HARBOURY_H_INCLUDED
-# define YY_YY_OBJ_B32_HARBOURY_H_INCLUDED
+#ifndef YY_YY_HARBOURY_H_INCLUDED
+# define YY_YY_HARBOURY_H_INCLUDED
 /* Enabling traces.  */
 #ifndef YYDEBUG
 # define YYDEBUG 0
@@ -511,7 +513,7 @@ int yyparse ();
 #endif
 #endif /* ! YYPARSE_PARAM */
 
-#endif /* !YY_YY_OBJ_B32_HARBOURY_H_INCLUDED  */
+#endif /* !YY_YY_HARBOURY_H_INCLUDED  */
 
 /* Copy the second part of user declarations.  */
 
@@ -1204,97 +1206,97 @@ static const yytype_int16 yyrhs[] =
 /* YYRLINE[YYN] -- source line where rule number YYN was defined.  */
 static const yytype_uint16 yyrline[] =
 {
-       0,   368,   368,   368,   369,   372,   373,   374,   375,   376,
-     377,   378,   379,   380,   381,   382,   383,   384,   385,   386,
-     387,   388,   389,   390,   391,   392,   393,   394,   395,   396,
-     397,   398,   399,   400,   401,   404,   405,   408,   411,   419,
-     437,   443,   436,   480,   486,   479,   524,   525,   526,   527,
-     528,   529,   530,   531,   534,   535,   536,   536,   537,   540,
-     541,   544,   545,   546,   547,   548,   549,   550,   551,   552,
-     553,   556,   557,   558,   559,   560,   561,   562,   563,   564,
-     565,   568,   576,   589,   590,   618,   618,   619,   620,   621,
-     622,   623,   624,   629,   634,   635,   636,   637,   638,   639,
-     640,   641,   643,   643,   647,   647,   648,   648,   649,   663,
-     663,   687,   689,   687,   690,   692,   690,   694,   695,   697,
-     696,   718,   718,   719,   719,   730,   736,   745,   746,   749,
-     749,   752,   753,   754,   755,   756,   759,   760,   763,   764,
-     765,   766,   767,   768,   771,   772,   775,   776,   777,   778,
-     781,   782,   783,   784,   787,   792,   793,   794,   797,   798,
-     799,   809,   812,   817,   836,   841,   846,   847,   850,   855,
-     858,   863,   871,   874,   888,   901,   915,   928,   942,   955,
-     966,   976,   987,   997,  1008,  1020,  1026,  1029,  1032,  1033,
-    1034,  1037,  1042,  1043,  1046,  1051,  1082,  1087,  1100,  1106,
-    1213,  1218,  1221,  1228,  1229,  1234,  1235,  1236,  1237,  1238,
-    1239,  1240,  1241,  1242,  1243,  1244,  1245,  1246,  1247,  1250,
-    1251,  1252,  1255,  1256,  1257,  1258,  1259,  1260,  1261,  1262,
-    1263,  1264,  1265,  1266,  1267,  1268,  1269,  1270,  1271,  1272,
-    1273,  1274,  1283,  1284,  1285,  1286,  1287,  1288,  1293,  1294,
-    1295,  1296,  1297,  1298,  1299,  1300,  1301,  1302,  1303,  1304,
-    1305,  1306,  1307,  1308,  1309,  1310,  1313,  1317,  1318,  1336,
-    1337,  1338,  1339,  1340,  1341,  1344,  1345,  1348,  1349,  1414,
-    1415,  1418,  1419,  1420,  1423,  1428,  1429,  1430,  1433,  1434,
-    1435,  1436,  1437,  1438,  1439,  1440,  1441,  1442,  1443,  1444,
-    1445,  1446,  1447,  1448,  1449,  1450,  1451,  1452,  1453,  1454,
-    1455,  1458,  1470,  1476,  1479,  1488,  1496,  1497,  1498,  1499,
-    1500,  1501,  1502,  1503,  1504,  1505,  1505,  1506,  1507,  1508,
-    1509,  1510,  1511,  1512,  1513,  1514,  1514,  1515,  1516,  1516,
-    1517,  1518,  1518,  1519,  1520,  1520,  1521,  1522,  1522,  1523,
-    1524,  1525,  1526,  1527,  1528,  1529,  1530,  1531,  1534,  1535,
-    1536,  1537,  1537,  1538,  1538,  1541,  1542,  1545,  1546,  1547,
-    1548,  1549,  1550,  1551,  1552,  1558,  1559,  1566,  1567,  1568,
-    1569,  1570,  1571,  1572,  1573,  1574,  1575,  1576,  1577,  1578,
-    1579,  1580,  1581,  1582,  1583,  1584,  1585,  1586,  1587,  1588,
-    1591,  1592,  1595,  1596,  1597,  1604,  1605,  1606,  1607,  1608,
-    1609,  1610,  1611,  1612,  1613,  1614,  1615,  1616,  1617,  1618,
-    1619,  1620,  1621,  1622,  1623,  1624,  1625,  1626,  1629,  1630,
-    1631,  1632,  1633,  1634,  1635,  1636,  1637,  1638,  1639,  1640,
-    1641,  1642,  1643,  1644,  1645,  1646,  1647,  1648,  1649,  1650,
-    1651,  1654,  1655,  1656,  1657,  1658,  1659,  1660,  1661,  1662,
-    1663,  1664,  1665,  1666,  1667,  1668,  1669,  1670,  1671,  1672,
-    1673,  1674,  1675,  1676,  1679,  1680,  1681,  1682,  1683,  1684,
-    1685,  1686,  1687,  1688,  1689,  1690,  1691,  1692,  1693,  1694,
-    1695,  1696,  1697,  1698,  1699,  1700,  1701,  1704,  1705,  1706,
-    1707,  1708,  1709,  1710,  1711,  1712,  1713,  1714,  1715,  1716,
-    1717,  1718,  1719,  1720,  1721,  1722,  1723,  1724,  1725,  1726,
-    1729,  1730,  1731,  1732,  1733,  1734,  1735,  1736,  1737,  1738,
-    1739,  1740,  1741,  1742,  1743,  1744,  1745,  1746,  1747,  1748,
-    1749,  1750,  1751,  1754,  1755,  1756,  1757,  1758,  1759,  1760,
-    1761,  1762,  1763,  1764,  1765,  1766,  1767,  1768,  1769,  1770,
-    1771,  1772,  1773,  1774,  1775,  1776,  1779,  1780,  1781,  1782,
-    1783,  1784,  1785,  1786,  1787,  1788,  1789,  1790,  1791,  1792,
-    1793,  1794,  1795,  1796,  1797,  1798,  1799,  1800,  1801,  1804,
-    1805,  1806,  1807,  1808,  1809,  1812,  1813,  1814,  1815,  1816,
-    1817,  1818,  1819,  1820,  1821,  1822,  1825,  1826,  1829,  1830,
-    1831,  1832,  1833,  1834,  1835,  1836,  1837,  1838,  1839,  1842,
-    1848,  1849,  1850,  1853,  1857,  1970,  2035,  2040,  2045,  1856,
-    2091,  2092,  2095,  2096,  2101,  2099,  2168,  2192,  2192,  2200,
-    2201,  2217,  2218,  2225,  2226,  2227,  2228,  2238,  2241,  2244,
-    2247,  2250,  2251,  2252,  2253,  2256,  2259,  2262,  2265,  2268,
-    2269,  2272,  2275,  2275,  2276,  2276,  2277,  2277,  2278,  2278,
-    2281,  2282,  2285,  2286,  2294,  2295,  2297,  2301,  2308,  2317,
-    2317,  2343,  2346,  2343,  2383,  2384,  2390,  2393,  2394,  2395,
-    2399,  2399,  2402,  2403,  2404,  2407,  2407,  2410,  2411,  2414,
-    2414,  2438,  2438,  2439,  2440,  2441,  2441,  2444,  2445,  2448,
-    2449,  2450,  2451,  2454,  2454,  2476,  2476,  2531,  2532,  2533,
-    2534,  2537,  2538,  2539,  2540,  2541,  2542,  2545,  2546,  2547,
-    2548,  2549,  2550,  2553,  2553,  2556,  2557,  2560,  2561,  2562,
-    2563,  2564,  2565,  2566,  2567,  2570,  2571,  2572,  2573,  2576,
-    2577,  2580,  2589,  2580,  2596,  2596,  2600,  2601,  2600,  2610,
-    2611,  2610,  2621,  2622,  2625,  2629,  2633,  2636,  2642,  2648,
-    2656,  2656,  2669,  2670,  2678,  2679,  2678,  2690,  2691,  2690,
-    2703,  2704,  2703,  2711,  2711,  2715,  2724,  2735,  2786,  2787,
-    2790,  2790,  2805,  2806,  2809,  2810,  2811,  2812,  2815,  2816,
-    2815,  2835,  2836,  2835,  2861,  2862,  2863,  2864,  2865,  2870,
-    2875,  2880,  2885,  2886,  2900,  2899,  2962,  2975,  2961,  2991,
-    3004,  3005,  3009,  3016,  3028,  3008,  3110,  3111,  3114,  3115,
-    3118,  3122,  3126,  3130,  3137,  3145,  3153,  3136,  3173,  3172,
-    3189,  3201,  3209,  3189,  3233,  3234,  3235,  3238,  3249,  3262,
-    3270,  3279,  3287,  3261,  3337,  3338,  3341,  3350,  3351,  3354,
-    3364,  3382,  3383,  3384,  3387,  3391,  3393,  3397,  3398,  3399,
-    3400,  3401,  3404,  3415,  3416,  3417,  3418,  3419,  3423,  3422,
-    3476,  3480,  3479,  3507,  3524,  3546,  3547,  3548,  3549,  3553,
-    3552,  3563,  3564,  3565,  3566,  3567,  3569,  3571,  3573,  3577,
-    3584,  3594,  3611,  3631,  3632
+       0,   370,   370,   370,   371,   374,   375,   376,   377,   378,
+     379,   380,   381,   382,   383,   384,   385,   386,   387,   388,
+     389,   390,   391,   392,   393,   394,   395,   396,   397,   398,
+     399,   400,   401,   402,   403,   406,   407,   410,   413,   421,
+     439,   445,   438,   482,   488,   481,   526,   527,   528,   529,
+     530,   531,   532,   533,   536,   537,   538,   538,   539,   542,
+     543,   546,   547,   548,   549,   550,   551,   552,   553,   554,
+     555,   558,   559,   560,   561,   562,   563,   564,   565,   566,
+     567,   570,   578,   591,   592,   620,   620,   621,   622,   623,
+     624,   625,   626,   631,   636,   637,   638,   639,   640,   641,
+     642,   643,   645,   645,   649,   649,   650,   650,   651,   665,
+     665,   689,   691,   689,   692,   694,   692,   696,   697,   699,
+     698,   720,   720,   721,   721,   732,   738,   747,   748,   751,
+     751,   754,   755,   756,   757,   758,   761,   762,   765,   766,
+     767,   768,   769,   770,   773,   774,   777,   778,   779,   780,
+     783,   784,   785,   786,   789,   794,   795,   796,   799,   800,
+     801,   811,   814,   819,   840,   845,   850,   851,   854,   859,
+     862,   867,   875,   878,   892,   905,   919,   932,   946,   959,
+     970,   980,   991,  1001,  1012,  1024,  1030,  1033,  1036,  1037,
+    1038,  1041,  1046,  1047,  1050,  1055,  1086,  1091,  1104,  1110,
+    1217,  1222,  1225,  1232,  1233,  1238,  1239,  1240,  1241,  1242,
+    1243,  1244,  1245,  1246,  1247,  1248,  1249,  1250,  1251,  1254,
+    1255,  1256,  1259,  1260,  1261,  1262,  1263,  1264,  1265,  1266,
+    1267,  1268,  1269,  1270,  1271,  1272,  1273,  1274,  1275,  1276,
+    1277,  1278,  1287,  1288,  1289,  1290,  1291,  1292,  1297,  1298,
+    1299,  1300,  1301,  1302,  1303,  1304,  1305,  1306,  1307,  1308,
+    1309,  1310,  1311,  1312,  1313,  1314,  1317,  1321,  1322,  1340,
+    1341,  1342,  1343,  1344,  1345,  1348,  1351,  1354,  1355,  1420,
+    1421,  1424,  1425,  1426,  1429,  1434,  1435,  1436,  1439,  1440,
+    1441,  1442,  1443,  1444,  1445,  1446,  1447,  1448,  1449,  1450,
+    1451,  1452,  1453,  1454,  1455,  1456,  1457,  1458,  1459,  1460,
+    1461,  1464,  1477,  1483,  1486,  1495,  1503,  1504,  1505,  1506,
+    1507,  1508,  1509,  1510,  1511,  1512,  1512,  1513,  1514,  1515,
+    1516,  1517,  1518,  1519,  1520,  1521,  1521,  1522,  1523,  1523,
+    1524,  1525,  1525,  1526,  1527,  1527,  1528,  1529,  1529,  1530,
+    1531,  1532,  1533,  1534,  1535,  1536,  1537,  1538,  1541,  1542,
+    1543,  1544,  1544,  1545,  1545,  1548,  1549,  1552,  1553,  1554,
+    1555,  1556,  1557,  1558,  1559,  1565,  1566,  1573,  1574,  1575,
+    1576,  1577,  1578,  1579,  1580,  1581,  1582,  1583,  1584,  1585,
+    1586,  1587,  1588,  1589,  1590,  1591,  1592,  1593,  1594,  1595,
+    1598,  1599,  1602,  1603,  1604,  1611,  1612,  1613,  1614,  1615,
+    1616,  1617,  1618,  1619,  1620,  1621,  1622,  1623,  1624,  1625,
+    1626,  1627,  1628,  1629,  1630,  1631,  1632,  1633,  1636,  1637,
+    1638,  1639,  1640,  1641,  1642,  1643,  1644,  1645,  1646,  1647,
+    1648,  1649,  1650,  1651,  1652,  1653,  1654,  1655,  1656,  1657,
+    1658,  1661,  1662,  1663,  1664,  1665,  1666,  1667,  1668,  1669,
+    1670,  1671,  1672,  1673,  1674,  1675,  1676,  1677,  1678,  1679,
+    1680,  1681,  1682,  1683,  1686,  1687,  1688,  1689,  1690,  1691,
+    1692,  1693,  1694,  1695,  1696,  1697,  1698,  1699,  1700,  1701,
+    1702,  1703,  1704,  1705,  1706,  1707,  1708,  1711,  1712,  1713,
+    1714,  1715,  1716,  1717,  1718,  1719,  1720,  1721,  1722,  1723,
+    1724,  1725,  1726,  1727,  1728,  1729,  1730,  1731,  1732,  1733,
+    1736,  1737,  1738,  1739,  1740,  1741,  1742,  1743,  1744,  1745,
+    1746,  1747,  1748,  1749,  1750,  1751,  1752,  1753,  1754,  1755,
+    1756,  1757,  1758,  1761,  1762,  1763,  1764,  1765,  1766,  1767,
+    1768,  1769,  1770,  1771,  1772,  1773,  1774,  1775,  1776,  1777,
+    1778,  1779,  1780,  1781,  1782,  1783,  1786,  1787,  1788,  1789,
+    1790,  1791,  1792,  1793,  1794,  1795,  1796,  1797,  1798,  1799,
+    1800,  1801,  1802,  1803,  1804,  1805,  1806,  1807,  1808,  1811,
+    1812,  1813,  1814,  1815,  1816,  1819,  1820,  1821,  1822,  1823,
+    1824,  1825,  1826,  1827,  1828,  1829,  1832,  1833,  1836,  1837,
+    1838,  1839,  1840,  1841,  1842,  1843,  1844,  1845,  1846,  1849,
+    1855,  1856,  1857,  1860,  1864,  1977,  2042,  2047,  2052,  1863,
+    2098,  2099,  2102,  2103,  2108,  2106,  2175,  2199,  2199,  2207,
+    2208,  2224,  2225,  2232,  2233,  2238,  2239,  2249,  2252,  2255,
+    2258,  2261,  2262,  2263,  2264,  2267,  2270,  2273,  2276,  2279,
+    2280,  2283,  2286,  2286,  2287,  2287,  2288,  2288,  2289,  2289,
+    2292,  2293,  2296,  2297,  2305,  2306,  2308,  2312,  2319,  2328,
+    2328,  2354,  2357,  2354,  2394,  2395,  2401,  2404,  2405,  2406,
+    2410,  2410,  2413,  2414,  2415,  2418,  2418,  2421,  2422,  2425,
+    2425,  2449,  2449,  2450,  2451,  2452,  2452,  2455,  2456,  2459,
+    2460,  2461,  2462,  2465,  2465,  2487,  2487,  2542,  2543,  2544,
+    2545,  2548,  2549,  2550,  2551,  2552,  2553,  2556,  2557,  2558,
+    2559,  2560,  2561,  2564,  2564,  2567,  2568,  2571,  2572,  2573,
+    2574,  2575,  2576,  2577,  2578,  2581,  2582,  2583,  2584,  2587,
+    2588,  2591,  2600,  2591,  2607,  2607,  2611,  2612,  2611,  2621,
+    2622,  2621,  2632,  2633,  2636,  2640,  2644,  2647,  2653,  2659,
+    2667,  2667,  2680,  2681,  2689,  2690,  2689,  2701,  2702,  2701,
+    2714,  2715,  2714,  2722,  2722,  2726,  2735,  2746,  2797,  2798,
+    2801,  2801,  2816,  2817,  2820,  2821,  2822,  2823,  2826,  2827,
+    2826,  2846,  2847,  2846,  2872,  2873,  2874,  2875,  2876,  2881,
+    2886,  2891,  2896,  2897,  2911,  2910,  2973,  2986,  2972,  3002,
+    3015,  3016,  3020,  3027,  3039,  3019,  3121,  3122,  3125,  3126,
+    3129,  3133,  3137,  3141,  3148,  3156,  3164,  3147,  3184,  3183,
+    3200,  3212,  3220,  3200,  3244,  3245,  3246,  3249,  3260,  3273,
+    3281,  3290,  3298,  3272,  3348,  3349,  3352,  3361,  3362,  3365,
+    3375,  3393,  3394,  3395,  3398,  3402,  3404,  3408,  3409,  3410,
+    3411,  3412,  3415,  3426,  3427,  3428,  3429,  3430,  3434,  3433,
+    3487,  3491,  3490,  3518,  3535,  3557,  3558,  3559,  3560,  3564,
+    3563,  3574,  3575,  3576,  3577,  3578,  3580,  3582,  3584,  3588,
+    3595,  3605,  3622,  3642,  3643
 };
 #endif
 
@@ -5724,6 +5726,8 @@ yyreduce:
                                                pCopy[ pTmp - pCopy ] = '\0';
                                                pBaseArrayName = hb_compExprNewString( pCopy, pTmp - pCopy, TRUE );
                                             }
+                                            else
+                                               hb_xfree( pCopy );
 
                                             bTrancuateBaseArray = FALSE;
                                          }
@@ -6014,7 +6018,7 @@ yyreduce:
     {
                                    (yyval.asExpr) = hb_compExprNewVar( (yyvsp[(1) - (1)].string) );
 
-                                   asExpr = (yyval.asExpr);
+                                   HB_YYERROR_CATCHER ( (yyval.asExpr) );
 
                                    if( hb_comp_BlocksList )
                                    {
@@ -6571,7 +6575,9 @@ yyreduce:
 
   case 275:
 
-    { (yyval.asExpr) = hb_compExprNewArgList( (yyvsp[(1) - (1)].asExpr) ); }
+    { (yyval.asExpr) = hb_compExprNewArgList( (yyvsp[(1) - (1)].asExpr) );
+                                         HB_YYERROR_CATCHER ( (yyval.asExpr) );
+                                       }
     break;
 
   case 276:
@@ -6822,6 +6828,7 @@ yyreduce:
                                                   hb_compYYError( 'E', HB_COMP_ERR_UNMATCHED_WITHOBJECT, "&", NULL );
                                             }
                                             (yyval.asExpr) = hb_compExprNewWithSendExp( (yyvsp[(2) - (2)].asExpr) );
+                                            HB_YYERROR_CATCHER ( (yyval.asExpr) );
                                          }
     break;
 
@@ -8616,7 +8623,7 @@ yyreduce:
 
     {
                   (yyval.asExpr) = hb_compExprNewCodeBlock();
-                  asExpr = (yyval.asExpr);
+                  HB_YYERROR_CATCHER ( (yyval.asExpr) );
 
                   if( hb_comp_BlocksList == NULL )
                   {
@@ -8752,7 +8759,11 @@ yyreduce:
 
   case 644:
 
-    { hb_comp_iVarScope = VS_LOCAL; (yyval.asExpr) = hb_compExprCBVarAdd( (yyvsp[(0) - (0)].asExpr), NULL , hb_comp_cVarType ); asExpr = (yyval.asExpr);hb_comp_cVarType = ' '; }
+    { hb_comp_iVarScope = VS_LOCAL;
+                                                    (yyval.asExpr) = hb_compExprCBVarAdd( (yyvsp[(0) - (0)].asExpr), NULL , hb_comp_cVarType );
+                                                    HB_YYERROR_CATCHER ( (yyval.asExpr) );
+                                                    hb_comp_cVarType = ' ';
+                                                  }
     break;
 
   case 645:
@@ -11618,6 +11629,57 @@ void hb_compReleaseRTVars( void )
 static void hb_compYYError( char cPrefix, int iError, const char * szError1, const char * szError2 )
 {
    hb_compGenError( hb_comp_szErrors, cPrefix, iError, szError1, szError2 );
+
+   if( asExpr )
+   {
+      switch( asExpr->ExprType )
+      {
+         case HB_ET_WITHSEND:
+         case HB_ET_VARIABLE:
+            hb_xfree( asExpr );
+            asExpr = NULL;
+            break;
+
+         case HB_ET_CODEBLOCK:
+         {
+            PHB_CBVAR pDel, pVar = (PHB_CBVAR) asExpr->value.asList.pIndex;
+
+            while( pVar )
+            {
+               pDel = pVar;
+               pVar = pVar->pNext;
+               hb_xfree( (void *) pDel );
+            }
+            hb_xfree( asExpr );
+            asExpr = NULL;
+            break;
+         }
+
+         case HB_ET_ARGLIST:
+         {
+            HB_EXPR_PTR pDel, pVar = asExpr->value.asList.pExprList;
+
+            while( pVar )
+            {
+               pDel = pVar;
+               pVar = pVar->pNext;
+               hb_xfree( (void *) pDel );
+            }
+            hb_xfree( asExpr );
+            asExpr = NULL;
+            break;
+         }
+      }
+   }
+
+   while( hb_comp_BlocksList )
+   {
+      PBLOCKSLIST pDel = hb_comp_BlocksList;
+
+      hb_comp_BlocksList = hb_comp_BlocksList->pOuter;
+      hb_xfree( (void *) pDel );
+   }
+
 
 #if 0
 
