@@ -8,6 +8,12 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2013-01-15 15:40 UTC+0200 Saulius Zrelskis <labitas/AT/gmail/com>
+  * source\compiler\harbour.c
+  * source\compiler\harbour.sly
+  * include/harboury.h
+    ! fix many memory leaks on failure
+
 2013-01-15 06:45 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
   * winmake/common.mak
   * winmake/compile.mak
